# music-recommendation-system

./: .cruft.json  .gitignore  .ruff.toml  README.md  pyproject.toml
.github/workflows/: automerge.yml
notebooks/: README.md
notebooks/1-data/: 1-algorhythm-feature-backfill.ipynb  1_algorhythm_feature_backfill.ipynb  data-collection.ipynb  get-data.ipynb
notebooks/1-data/db/: sqlite-setup.py
notebooks/2-exploration/: data-exploration.ipynb
notebooks/4-feat_eng/: feature-engineering.ipynb
notebooks/5-models/: baseline-model.ipynb  model-selection.ipynb
src/: config.py
